# projeto-scraping-celulares-mercadolivre

./: README.md  pyproject.toml
data/: data.jsonl  quotes.db
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/dashboard/: app.py
src/transformacao/: main.py
