[tool.poetry]
name = "projeto-scraping-celulares-mercadolivre"
version = "0.1.0"
description = ""
authors = ["Maria Eduarda <mariaeducorrea2502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
pandas = "^2.2.3"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
